# Assignment2

./: CMakeLists.txt  README.md  package.xml
assignment2_msgs/: CMakeLists.txt  package.xml
assignment2_msgs/msg/: ObstaclePosition.msg
assignment2_msgs/srv/: Average.srv  Threshold.srv
bme_gazebo_sensors/: CMakeLists.txt  package.xml
bme_gazebo_sensors/launch/: spawn_robot.launch.py
bme_gazebo_sensors/src/: Assignment2_service.cpp  distance.cpp  movement.cpp
bme_gazebo_sensors/urdf/: mogi_bot.gazebo
launch/: spawn_robot.launch.py
src/: distance.cpp  movement.cpp
urdf/: mogi_bot.gazebo
